# XIL_ISE

./: .gitignore  generate_project.tcl
add_w_carry/: CMakeLists.txt  add_w_carry.vhd  add_w_carry_tb.vhd  out.txt
barrel_shifter_multi_stage/: barrel_shifter.vhd  barrel_shifter_tb.vhd  out.txt
barrel_shifter_sel/: CMakeLists.txt  barrel_shifter.vhd  barrel_shifter_tb.vhd  in.txt
d_ff/: CMakeLists.txt  d_ff.vhd  d_ff_tb.vhd  in.txt  out.txt
d_ff_en/: d_ff_en.vhd  d_ff_en_tb.vhd
d_ff_en_two_seg/: CMakeLists.txt  d_ff_en.vhd  d_ff_en_tb.vhd  in.txt  out.txt
d_ff_reset/: CMakeLists.txt  d_ff_reset.vhd  d_ff_reset_tb.vhd  out.txt
decoder_2_4/: CMakeLists.txt
decoder_2_4_case/: decoder_2_4.vhd  decoder_2_4_tb.vhd
decoder_2_4_cond/: decoder_2_4.vhd  decoder_2_4_tb.vhd
decoder_2_4_if/: decoder_2_4.vhd  decoder_2_4_tb.vhd  in.txt  out.txt
decoder_2_4_sel/: CMakeLists.txt  decoder_2_4.vhd  decoder_2_4_tb.vhd
eq2/: CMakeLists.txt  eq1.vhd  eq2.bit  eq2.mcs  eq2.tcl  eq2.ucf  eq2.vhd  eq2_tb.vhd  in.txt  out.txt
fp_adder/: CMakeLists.txt  fp_adder.vhd  fp_adder_tb.vhd  in.txt  out.txt
gen_add_w_carry/: CMakeLists.txt  gen_add_w_carry.vhd  gen_add_w_carry_tb.vhd  in.txt
hex_to_sseg/: CMakeLists.txt  hex_to_sseg.vhd  hex_to_sseg_tb.vhd  in.txt  out.txt
prio_encoder/: CMakeLists.txt  prio_encoder.vhd
prio_encoder_case/: CMakeLists.txt  prio_encoder.vhd  prio_encoder_tb.vhd
prio_encoder_cond/: in.txt  out.txt  prio_encoder_tb.vhd
prio_encoder_if/: prio_encoder.vhd  prio_encoder_tb.vhd
prio_encoder_sel/: prio_encoder.vhd  prio_encoder_tb.vhd
reg_reset/: CMakeLists.txt  in.txt  out.txt  reg_reset.vhd  reg_reset_tb.vhd
sign_mag_add/: CMakeLists.txt  in.txt  out.txt  sign_mag_add.vhd  sign_mag_add_tb.vhd
